# sambar

./: Cargo.toml  error_log.txt  flake.nix  rust-toolchain.toml
src/: main.rs
