[package]
name = "sambar"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_18"] }
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.14.0"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client"] }
